--- a/Makefile.vc
+++ b/Makefile.vc
@@ -123,23 +123,18 @@ check-env:
 	@ echo *** TBD check-env
 
 clean:
-	for i in $(LIBS) $(PROGS); do \
-	    (cd $(OMNETPP_SRC_DIR:/=\)\$$i && $(MAKE) $(MAKEFILE) clean); \
-	done
-	for i in $(SAMPLES); do \
-	    (cd $(OMNETPP_SAMPLES_DIR:/=\)\$$i && $(MAKE) $(MAKEFILE) clean); \
-	done
+	-for %%i in ( $(LIBS) $(PROGS) ) do \
+	    cd $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MAKEFILE) clean
+#	-for %%i in ( $(SAMPLES) ) do \
+#	    cd $(OMNETPP_SAMPLES_DIR:/=\)\%%i && $(MAKE) $(MAKEFILE) clean
 
 depend:
-	for i in $(LIBS) $(PROGS); do \
-	    (cd $(OMNETPP_SRC_DIR:/=\)\$$i && $(MAKE) $(MAKEFILE) depend); \
-	done
-	for i in $(SAMPLES); do \
-	    (cd $(OMNETPP_SAMPLES_DIR:/=\)\$$i && $(MAKE) $(MAKEFILE) depend); \
-	done
+	for %%i in ( $(LIBS) $(PROGS) ) do \
+	    cd $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MAKEFILE) depend
+#	for %%i in ( $(SAMPLES) ) do \
+#	    cd $(OMNETPP_SAMPLES_DIR:/=\)\%%i && $(MAKE) $(MAKEFILE) depend
 
 install-local:
-	for i in $(LIBS) $(PROGS); do \
-	    (cd $(OMNETPP_SRC_DIR:/=\)\$$i && $(MAKE) $(MAKEFILE) install-local); \
-	done
+	for %%i in ( $(LIBS) $(PROGS) ) do \
+	    cd $(OMNETPP_SRC_DIR:/=\)\%%i && $(MAKE) $(MAKEFILE) install-local
 
