--- a/Makefile.in
+++ b/Makefile.in
@@ -114,11 +114,17 @@ demo:
 #=====================================================================
 
 check-env:
-	@ if echo $$PATH | grep -q "@OMNETPP_BIN_DIR@"; then :; else \
-	  echo ' *** Warning: @OMNETPP_BIN_DIR@ not in the path, some components won'\''t build!'; \
-	fi
-	@ if echo $$LD_LIBRARY_PATH | grep -q "@OMNETPP_LIB_DIR@"; then :; else \
-	  echo ' *** Warning: @OMNETPP_LIB_DIR@ not in LD_LIBRARY_PATH, shared libs won'\''t work!'; \
+	@probefile=__tmp__
+        echo '' >@OMNETPP_BIN_DIR@/$probefile \
+	chmod +x  @OMNETPP_BIN_DIR@/$probefile \
+	if $probefile >/dev/null 2>/dev/null; then :; else \
+	  echo ' *** Warning: @OMNETPP_BIN_DIR@ is not in the path, some components won'\''t build!'; \
+	fi \
+	rm -f @OMNETPP_BIN_DIR@/$probefile \
+        if uname | grep "CYGWIN" >/dev/null; then :; else \
+	  if echo $$LD_LIBRARY_PATH | grep "@OMNETPP_LIB_DIR@" >/dev/null; then :; else \
+	    echo ' *** Warning: Looks like @OMNETPP_LIB_DIR@ is not in LD_LIBRARY_PATH, shared libs may not work!'; \
+          fi \
 	fi
 
 clean:
