--- a/Makefile.in
+++ b/Makefile.in
@@ -114,17 +114,20 @@ demo:
 #=====================================================================
 
 check-env:
-	@probefile=__tmp__
-        echo '' >@OMNETPP_BIN_DIR@/$probefile \
-	chmod +x  @OMNETPP_BIN_DIR@/$probefile \
-	if $probefile >/dev/null 2>/dev/null; then :; else \
-	  echo ' *** Warning: @OMNETPP_BIN_DIR@ is not in the path, some components won'\''t build!'; \
-	fi \
-	rm -f @OMNETPP_BIN_DIR@/$probefile \
-        if uname | grep "CYGWIN" >/dev/null; then :; else \
+	@probefile=__tmp__; \
+	if (echo '' >@OMNETPP_BIN_DIR@/$$probefile && \
+	    chmod +x @OMNETPP_BIN_DIR@/$$probefile) 2>/dev/null; then \
+	  if $$probefile >/dev/null 2>/dev/null; then :; else \
+	    echo '  *** Warning: @OMNETPP_BIN_DIR@ is not in the path, some components may not build!'; \
+	  fi; \
+	else \
+	  echo '  *** Warning: Cannot write to @OMNETPP_BIN_DIR@, does it exist?'; \
+	fi; \
+	rm -f @OMNETPP_BIN_DIR@/$$probefile; \
+	if uname | grep "CYGWIN" >/dev/null; then :; else \
 	  if echo $$LD_LIBRARY_PATH | grep "@OMNETPP_LIB_DIR@" >/dev/null; then :; else \
-	    echo ' *** Warning: Looks like @OMNETPP_LIB_DIR@ is not in LD_LIBRARY_PATH, shared libs may not work!'; \
-          fi \
+	    echo '  *** Warning: Looks like @OMNETPP_LIB_DIR@ is not in LD_LIBRARY_PATH, shared libs may not work!'; \
+	  fi; \
 	fi
 
 clean:
