added -DBUILDING_... to COPTS

--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -27,7 +27,7 @@ TKENV_EMBED_SUFFIX=@TKENV_EMBED_SUFFIX@
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS)
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR) -I../envir $(TK_CFLAGS) -DBUILDING_TKENV
 
 OMNETPP_TKENV_DIR=`@MYPWD@`
 
