--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -75,26 +75,28 @@ install-local: libenvir$(LIB_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-args.o: envdefs.h args.h
-cenvir.o: envdefs.h args.h ../sim/cenvir.h ../sim/defs.h omnetapp.h ../sim/carray.h
-cenvir.o: ../sim/cobject.h ../sim/util.h slaveapp.h ../sim/cmodule.h
-cenvir.o: ../sim/ccor.h ../sim/chead.h ../sim/cqueue.h ../sim/cgate.h
-cenvir.o: ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h ../sim/coutvect.h
-cenvir.o: ../sim/cnetmod.h
-cinifile.o: envdefs.h ../sim/cenvir.h ../sim/defs.h ../sim/util.h cinifile.h patmatch.h
-main.o: envdefs.h ../sim/cobject.h ../sim/defs.h ../sim/util.h ../sim/csimul.h
+args.o: args.h envdefs.h ../sim/defs.h
+cenvir.o: args.h envdefs.h ../sim/defs.h ../sim/cenvir.h omnetapp.h
+cenvir.o: ../sim/carray.h ../sim/cobject.h ../sim/util.h ../sim/chead.h
+cenvir.o: slaveapp.h appreg.h ../sim/cmodule.h ../sim/ccor.h ../sim/cqueue.h
+cenvir.o: ../sim/cgate.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
+cenvir.o: ../sim/coutvect.h ../sim/cnetmod.h
+cinifile.o: ../sim/cenvir.h ../sim/defs.h ../sim/util.h cinifile.h envdefs.h
+cinifile.o: patmatch.h
+main.o: ../sim/cobject.h ../sim/defs.h ../sim/util.h ../sim/csimul.h
 main.o: ../sim/errmsg.h ../sim/chead.h ../sim/cmsgheap.h ../sim/coutvect.h
 main.o: ../sim/ccor.h ../sim/cenvir.h
-omnetapp.o: envdefs.h args.h omnetapp.h ../sim/carray.h ../sim/cobject.h ../sim/defs.h
-omnetapp.o: ../sim/util.h ../sim/cenvir.h cinifile.h patmatch.h
-omnetapp.o: ../sim/ctypes.h ../sim/chead.h ../sim/ccor.h ../sim/csimul.h
-omnetapp.o: ../sim/errmsg.h ../sim/cmsgheap.h ../sim/coutvect.h ../sim/cpar.h
-omnetapp.o: ../sim/cnetmod.h ../sim/cmodule.h ../sim/cqueue.h ../sim/cgate.h
-patmatch.o: envdefs.h patmatch.h ../sim/defs.h
-seeds.o: envdefs.h omnetapp.h ../sim/carray.h ../sim/cobject.h ../sim/defs.h
-seeds.o: ../sim/util.h ../sim/cenvir.h
-slaveapp.o: envdefs.h slaveapp.h omnetapp.h ../sim/carray.h ../sim/cobject.h
-slaveapp.o: ../sim/defs.h ../sim/util.h ../sim/cenvir.h cinifile.h
-slaveapp.o: ../sim/csimul.h ../sim/errmsg.h ../sim/chead.h ../sim/cmsgheap.h
+omnetapp.o: args.h envdefs.h ../sim/defs.h omnetapp.h ../sim/carray.h
+omnetapp.o: ../sim/cobject.h ../sim/util.h ../sim/chead.h ../sim/cenvir.h
+omnetapp.o: cinifile.h patmatch.h ../sim/ctypes.h ../sim/ccor.h
+omnetapp.o: ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
+omnetapp.o: ../sim/coutvect.h ../sim/cpar.h ../sim/cnetmod.h ../sim/cmodule.h
+omnetapp.o: ../sim/cqueue.h ../sim/cgate.h
+patmatch.o: patmatch.h ../sim/defs.h envdefs.h
+seeds.o: omnetapp.h ../sim/carray.h ../sim/cobject.h ../sim/defs.h
+seeds.o: ../sim/util.h ../sim/chead.h ../sim/cenvir.h envdefs.h
+slaveapp.o: slaveapp.h envdefs.h ../sim/defs.h omnetapp.h ../sim/carray.h
+slaveapp.o: ../sim/cobject.h ../sim/util.h ../sim/chead.h ../sim/cenvir.h
+slaveapp.o: cinifile.h ../sim/csimul.h ../sim/errmsg.h ../sim/cmsgheap.h
 slaveapp.o: ../sim/coutvect.h ../sim/ccor.h ../sim/cnetmod.h ../sim/cmodule.h
-slaveapp.o: ../sim/cqueue.h ../sim/cgate.h
+slaveapp.o: ../sim/cqueue.h ../sim/cgate.h appreg.h
