--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -92,11 +92,11 @@ install-local: default
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-ebnf.tab.o: ebnfcfg.h parsened.h nedfile.h disp.h
-lex.yy.o: ebnf.tab.h ebnfcfg.h parsened.h
+ebnf.tab.o: ebnf.h ebnfcfg.h parsened.h nedfile.h disp.h
+lex.yy.o: ebnf.h ebnf.tab.h ebnfcfg.h parsened.h
 arrow.o: arrow.h
 disp.o: disp.h
-gned.o: arrow.h parsened.h tklib.h
-nedfile.o: nedfile.h parsened.h
-parsened.o: parsened.h nedfile.h disp.h tklib.h
+gned.o: arrow.h parsened.h ebnf.h tklib.h
+nedfile.o: nedfile.h parsened.h ebnf.h
+parsened.o: parsened.h ebnf.h nedfile.h disp.h tklib.h
 tklib.o: tklib.h
