--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -15,7 +15,7 @@ CPPOBJS= ccor.obj ctypes.obj carray.obj cgate.obj cmodule.obj csimul.obj cobject
          cpacket.obj cfsm.obj
 CPPOBJS_STD= std\netpack.obj
 CPPOBJS_PVM= pvm\pvmmod.obj pvm/pvmpack.obj
-ASMOBJS=
+LIBS= $(OMNETPP_SRC_DIR)/envir/envir.ilib
 
 #
 # Targets
@@ -26,19 +26,16 @@ sim_std : sim_std$(LIB_SUFFIX)
 
 sim_pvm : sim_pvm$(LIB_SUFFIX)
 
-sim_std.lib : $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS)
-	$(AR) /nologo /out:sim_std.lib $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS)
+sim_std.lib : $(CPPOBJS) $(CPPOBJS_STD)
+	$(AR) /nologo /out:sim_std.lib $(CPPOBJS) $(CPPOBJS_STD)
 
-sim_std.ilib : $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS)
-	- $(SHLIB_LD) /nologo /implib:sim_std.ilib $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS)
+sim_std.dll : $(CPPOBJS) $(CPPOBJS_STD) $(LIBS)
+	$(SHLIB_LD) /nologo /out:sim_std.dll /implib:sim_std.ilib $(CPPOBJS) $(CPPOBJS_STD) $(LIBS)
 
-sim_std.dll : $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS)
-	$(SHLIB_LD) /nologo /out:sim_std.dll /implib:sim_std.ilib $(CPPOBJS) $(CPPOBJS_STD) $(ASMOBJS) ../envir/envir.imp.lib
+sim_pvm.lib : $(CPPOBJS) $(CPPOBJS_PVM)
+	$(AR) /nologo /out:sim_pvm.lib $(CPPOBJS) $(CPPOBJS_PVM)
 
-sim_pvm.lib : $(CPPOBJS) $(CPPOBJS_PVM) $(ASMOBJS)
-	$(AR) /nologo /out:sim_pvm.lib $(CPPOBJS) $(CPPOBJS_PVM) $(ASMOBJS)
-
-#TBD: sim_pvm.ilib, sim_pvm.dll
+#TBD: sim_pvm.dll
 
 ccor.obj : ccor.cc
 	$(CXX) $(COPTS) /c /Tp ccor.cc
