*** empty log message ***

--- a/Makefile.vc
+++ b/Makefile.vc
@@ -12,6 +12,10 @@ include configuser.vc
 MOPTS=/nologo
 MAKEFILE=/F Makefile.vc
 
+# fixme: ilib only needed if dlls are to be built
+ILIB=ilib
+#ILIB=
+
 #=====================================================================
 #
 # Main targets
@@ -32,7 +36,7 @@ components: libs progs install-local
 #
 #=====================================================================
 
-LIBS=ilib sim envir cmdenv tkenv
+LIBS=$(ILIB) sim envir cmdenv tkenv
 PROGS=utils nedc gned plove
 SAMPLES=dyna fddi fifo1 fifo2 hcube hist nim pvmex token demo
 
@@ -49,7 +53,6 @@ samples: $(SAMPLES)
 # Libraries
 #
 
-# fixme: ilib only needed if dlls are to be built
 ilib:
 	cd /d $(OMNETPP_SRC_DIR:/=\)\envir && $(MAKE) $(MOPTS) $(MAKEFILE) envir.ilib
 
